--- a/config.ini.example
+++ b/config.ini.example
@@ -1,6 +1,6 @@
 [pyrogram]
-api_id = [DATA EXPUNGED]
-api_hash = [DATA EXPUNGED]
+api_id = 1235463
+api_hash = 4acbe883a97ca93fe49b37a80b469a00
 
 [plugins]
 root = plugins
@@ -15,7 +15,7 @@ hostname = 127.0.0.1
 port = 1080
 
 [basic]
-bot_token = [DATA EXPUNGED]
+bot_token = 1052429800:AAEBLaDr1Po4b5ku5AOgTBFQ6h2z4pHTGB0
 prefix = /!
 
 [channels]
@@ -32,12 +32,12 @@ date_reset = 1st mon
 flood_ban = 5
 flood_limit = 5
 flood_time = 5
-host_id = [DATA EXPUNGED]
-host_name = [DATA EXPUNGED]
+host_id = WOCyo
+host_name = host
 per_page = 10
 project_link = https://scp-079.org/pm/
 project_name = SCP-079-PM
-zh_cn = [DATA EXPUNGED]
+zh_cn = True
 
 [encrypt]
 password = [DATA EXPUNGED]
